[package]
name = "web3-unit-converter"
version = "0.1.0"
edition = "2021"
authors = ["p0p3yee <devp0p3yee@gmail.com>"]
license = "MIT"
description = "Convert Eth unit (wei, gwei, eth) in rust"
homepage = "https://github.com/p0p3yee/web3-unit-converter"
repository = "https://github.com/p0p3yee/web3-unit-converter"
readme = "README.md"
keywords = ["web3", "ethereum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
ethereum-types = {version = "0.13.1", default_features = false, features = ["std"]}